Fixed login password input overflow on mobile

--- a/src/Components/landing/landing.css
+++ b/src/Components/landing/landing.css
@@ -50,9 +50,13 @@
     border: 2px solid #333;
 }
 
-.toggleViewPasswordIcon {
-    transform: translateX(-2px);
+.landingPasswordContainer>input {
+    width: 95%;
 }
+
+/* .toggleViewPasswordIcon {
+    transform: translateX(-2px);
+} */
 
 .landingPasswordContainer:focus-within {
     border: 2px solid deepskyblue;
